--- a/index.html
+++ b/index.html
@@ -181,10 +181,13 @@
                             </div>
                             <h4>Valores</h4>
                             <ul>
+                                <li><strong>Compromisso:</strong> Dedicação total aos projetos e prazos</li>
+                                <li><strong>Cuidado:</strong> Atenção aos detalhes e necessidades do cliente</li>
                                 <li><strong>Excelência:</strong> Qualidade superior em todos os aspectos</li>
+                                <li><strong>Especialização:</strong> Conhecimento técnico especializado</li>
+                                <li><strong>Solução:</strong> Foco em resolver desafios dos clientes</li>
                                 <li><strong>Inovação:</strong> Soluções criativas e tecnologias avançadas</li>
                                 <li><strong>Personalização:</strong> Projetos únicos para cada cliente</li>
-                                <li><strong>Sustentabilidade:</strong> Responsabilidade ambiental</li>
                                 <li><strong>Integridade:</strong> Conduta ética e transparente</li>
                             </ul>
                         </div>
@@ -448,8 +451,8 @@
                     </div>
                     <div class="overview-metrics">
                         <div class="metric-card">
-                            <div class="metric-value">R$ 1.8M</div>
-                            <div class="metric-label">Receita Ano 3</div>
+                            <div class="metric-value">R$ 600K</div>
+                            <div class="metric-label">Receita Ano 1</div>
                         </div>
                         <div class="metric-card">
                             <div class="metric-value">300%</div>
@@ -497,11 +500,14 @@
                             </div>
                             <h4>Valores</h4>
                             <ul>
+                                <li><strong>Compromisso:</strong> Dedicação total aos serviços prestados</li>
+                                <li><strong>Cuidado:</strong> Atenção especial aos investimentos dos clientes</li>
+                                <li><strong>Excelência:</strong> Qualidade superior em assistência técnica</li>
                                 <li><strong>Especialização:</strong> Conhecimento técnico específico</li>
+                                <li><strong>Solução:</strong> Foco em resolver problemas técnicos</li>
                                 <li><strong>Confiabilidade:</strong> Relacionamentos baseados na transparência</li>
                                 <li><strong>Preservação:</strong> Cuidado com investimentos dos clientes</li>
                                 <li><strong>Inovação:</strong> Técnicas e equipamentos avançados</li>
-                                <li><strong>Sustentabilidade:</strong> Produtos biodegradáveis</li>
                             </ul>
                         </div>
                     </div>
@@ -776,10 +782,10 @@
                             <i class="fas fa-tools"></i>
                         </div>
                         <h4>OLY CARE</h4>
-                        <p>Serviços Especializados</p>
+                        <p>Assistência Técnica Premium</p>
                         <div class="org-stats">
-                            <span>8 colaboradores</span>
-                            <span>R$ 1.8M receita/ano</span>
+                            <span>6 colaboradores (2025/2026)</span>
+                            <span>R$ 600K receita/ano</span>
                         </div>
                     </div>
                 </div>
@@ -787,25 +793,24 @@
                 <div class="org-level level-3">
                     <div class="dept-grid">
                         <div class="dept-card">
-                            <h5>Comercial</h5>
+                            <h5>Logística & Suporte</h5>
                             <ul>
-                                <li>Vendas Consultivas</li>
-                                <li>Relacionamento Clientes</li>
-                                <li>Parcerias Estratégicas</li>
-                            </ul>
-                        </div>
-                        <div class="dept-card">
-                            <h5>Operações</h5>
-                            <ul>
-                                <li>Produção & Qualidade</li>
-                                <li>Logística & Instalação</li>
+                                <li>Logística</li>
+                                <li>Instalação</li>
                                 <li>Suporte Técnico</li>
                             </ul>
                         </div>
                         <div class="dept-card">
-                            <h5>Administrativo</h5>
+                            <h5>Administrativo & Financeiro</h5>
                             <ul>
-                                <li>Financeiro & Controladoria</li>
+                                <li>Administrativo</li>
+                                <li>Financeiro</li>
+                                <li>Controladoria</li>
+                            </ul>
+                        </div>
+                        <div class="dept-card">
+                            <h5>RH & Tecnologia</h5>
+                            <ul>
                                 <li>Recursos Humanos</li>
                                 <li>TI & Sistemas</li>
                             </ul>
@@ -814,7 +819,7 @@
                             <h5>Marketing</h5>
                             <ul>
                                 <li>Marketing Digital</li>
-                                <li>Eventos & Networking</li>
+                                <li>Relacionamento</li>
                                 <li>Comunicação</li>
                             </ul>
                         </div>
@@ -829,8 +834,8 @@
                     </div>
                     <div class="summary-content">
                         <h4>Total de Colaboradores</h4>
-                        <span class="summary-number">83</span>
-                        <p>50 OLY INTERIORES + 25 OLY PLANEJADOS + 8 OLY CARE</p>
+                        <span class="summary-number">81</span>
+                        <p>50 OLY INTERIORES + 25 OLY PLANEJADOS + 6 OLY CARE</p>
                     </div>
                 </div>
                 <div class="summary-card">
@@ -839,7 +844,7 @@
                     </div>
                     <div class="summary-content">
                         <h4>Receita Consolidada</h4>
-                        <span class="summary-number">R$ 12M+</span>
+                        <span class="summary-number">R$ 10.8M+</span>
                         <p>Projeção 2027 - Crescimento sustentável</p>
                     </div>
                 </div>
